--- a/pageone.html
+++ b/pageone.html
@@ -4,8 +4,9 @@
         <title>main index</title>
         <style>
             body  {
-                background-image: url(./images/image1.jpg);
-                background-attachment: fixed;
+                background-image: url(images/image1.jpg);
+                background-position: center;
+                background-size: 100%;
                 
             }
         </style>
@@ -13,9 +14,9 @@
 <body>
     <h1>PAGE ONE</h1>
     <p>This is page one of my work</p>
-    <img src="./images/image1.jpg" alt="second image">
-    <img src="images/image3.jpg" alt="third image">
-    <img src="images/image4.jpg" alt="fourth image">
+    <p><img src="./images/image2.jpg" alt="second image"></p>
+    <p><img src="images/image3.jpg" alt="third image"></p>
+    <p><img src="images/image4.jpg" alt="fourth image"></p>
     <p><a href="index.html">Back to Home</a></p>
  
 </body>
