--- a/pagetwo.html
+++ b/pagetwo.html
@@ -6,8 +6,8 @@
     <body>
         <h1>MY VIDEO</h1>
         <P>Click on my video below;</P>
-        <video width="300" height="200" controls play pause>
-            <source src="videos/myvideo.mp4" type="video/mp4">
+        <video width="500" height="300" controls play pause>
+            <source src="videos/lastvideo-dwnld.mp4" type="video/mp4">
         </video>
         <p><a href="index.html">Back to Home</a></p>
     
