--- a/pageone.html
+++ b/pageone.html
@@ -14,7 +14,7 @@
 <body>
     <h1>PAGE ONE</h1>
     <p>This is page one of my work</p>
-    <p><img src="./images/image2.jpg" alt="second image"></p>
+    <p><img src="./images/image2.jpg" alt="second image" style="width: 128px;height: 128px;"></p>
     <p><img src="images/image3.jpg" alt="third image"></p>
     <p><img src="images/image4.jpg" alt="fourth image"></p>
     <p><a href="index.html">Back to Home</a></p>
