--- a/pageone.html
+++ b/pageone.html
@@ -7,6 +7,7 @@
                 background-image: url(images/image1.jpg);
                 background-position: center;
                 background-size: 100%;
+                background-color: green;
                 
             }
         </style>
