--- a/pagethree.html
+++ b/pagethree.html
@@ -3,6 +3,9 @@
     <head>
         <style></style>
     </head>
+    <style>
+        body     {background-color: hotpink;}
+    </style>
     <body>
         <h1>MY CONTACTS AND QUERIES</h1>
         <P>Tel:0756103064/0781666984</P>
