--- a/pagethree.html
+++ b/pagethree.html
@@ -16,5 +16,8 @@
         <P>Less interaction yet the course is practical</P>
         <p>Network problem sometimes when there is an online lecturer</p>
         <p><a href="index.html">Back to Home</a></p>
+        <p><a href="pageone.html">pageone</a></p>
+        <p><a href="pagetwo.html">pagetwo</a></p>
+        
     </body>
 </html>
