--- a/pageone.html
+++ b/pageone.html
@@ -19,6 +19,9 @@
     <p><img src="images/image3.jpg" alt="third image" style="width: 500px;height: 500px;"></p>
     <p><img src="images/image4.jpg" alt="fourth image" style="width: 500px;height: 500px;"></p>
     <p><a href="index.html">Back to Home</a></p>
+    
+        <p><a href="pagetwo.html">pagetwo</a></p>
+        <p><a href="pagethree.html">pagethree</a></p>
  
 </body>
 </html>
