--- a/pagetwo.html
+++ b/pagetwo.html
@@ -10,6 +10,9 @@
             <source src="videos/lastvideo-dwnld.mp4" type="video/mp4">
         </video>
         <p><a href="index.html">Back to Home</a></p>
+        <p><a href="pageone.html">pageone</a></p>
+    
+        <p><a href="pagethree.html">pagethree</a></p>
     
     </body>
 </html>
