--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>index page</title>
+        <link rel="stylesheet" href="/css/quiz_style.css">
     </head>
+    
     <body>
         <h1>MY INDEX PAGE</h1>
         <p><a href="pageone.html">pageone</a></p>
