--- a/pagetwo.html
+++ b/pagetwo.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" href="/css/quiz_style.css">
     </head>
+
     <body>
         <h1>MY VIDEO</h1>
         <P>Click on my video below;</P>
