--- a/pagethree.html
+++ b/pagethree.html
@@ -6,6 +6,7 @@
     <style>
         body     {background-color: hotpink;}
     </style>
+    <link rel="stylesheet" href="/css/quiz_style.css">
     <body>
         <h1>MY CONTACTS AND QUERIES</h1>
         <P>Tel:0756103064/0781666984</P>
