--- a/pageone.html
+++ b/pageone.html
@@ -11,6 +11,7 @@
                 
             }
         </style>
+        <link rel="stylesheet" href="/css/quiz_style.css">
     </head>
 <body>
     <h1>PAGE ONE</h1>
